fixed scrollbar display

--- a/css/csmuseum.css
+++ b/css/csmuseum.css
@@ -16,9 +16,9 @@ body {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
-}
+} */
 
 .arrow-up {
   display: flex;
